# vibepascal

./: .gitignore  AGENT-NUANCES.md  AI-GAMEPLAY.md  GEMINI.md  Makefile  README.md  STORY.md  agno-game.sh  agno-mcp-game.sh  ai-game.sh  ai_client.py  dustwood.pas  guidance_full.txt  guidance_minimal.txt  mcp-client-analysis.md  model_tester.sh  ms-agent-game.sh  ms-agent-mcp-game.sh  play-game.sh  play-mcp-game.sh  pydantic-game.sh  pydantic-mcp-game.sh  pydantic-mcp-multi-model.sh  pyproject.toml  sidecar.py  strands-game.sh  strands-mcp-game.sh  test_pexpect.py  world.ini
data/: guidance_full.txt  guidance_medium.txt  guidance_minimal.txt  world.ini
misc/: saruca-notes.md
scripts/: FLOW.md  OBSERVABILITY.md  agno-game.sh  agno-mcp-game.sh  agno_client.py  agno_mcp_client.py  ai-game.sh  ai_client.py  client.py  guidance_loader.py  llm_observability.py  mcp-smoke-test.sh  mcp_benchmark.py  mcp_command_policy.py  ms-agent-game.sh  ms-mcp-agent-game.sh  ms_agent_client.py  ms_agent_mcp_client.py  pydantic-mcp-game.sh  pydantic-multi-model.sh  pydantic_client.py  pydantic_mcp_client.py  sidecar.py  strands-ai-game.sh  strands-mcp-game.sh  strands_ai_client.py  strands_client.py  strands_mcp_client.py
src/: ARCHITECTURE.md
src/golang/: commands.go  flags.go  game.go  go.mod  go.sum  io.go  main.go  mcp_server.go  output.go  persistence.go  state.go  summary.go  types.go  world.go
src/pascal/: dustwood  dustwood.pas  u_commands.pas  u_io.pas  u_persistence.pas  u_state.pas  u_types.pas  u_world.pas
web/: app.js  index.html  style.css
(+1 files in other folders)
